More Changes front end

--- a/faq.html
+++ b/faq.html
@@ -49,7 +49,7 @@
                                     </ul>
                                 </div>
                                 <div class="bar__module">
-                                	<a class="btn btn--sm type--uppercase" href="my-pepes.html"> <span class="btn__text">
+                                	<a class="btn btn--sm type--uppercase" href="wallet.html"> <span class="btn__text">
                                      My Pepes</span> </a>
                                     <a class="btn btn--sm btn--primary type--uppercase" href="marketplace.html"> <span class="btn__text">
                                     Marketplace</span> </a>
@@ -65,42 +65,59 @@
             <section class="text-center space--md">
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-md-10 col-lg-8">
+                        <div class="col-md-10 col-lg-4">
                             <ul class="accordion accordion-2">
-                            <h2>Getting Started</h2>
+                            
+					<h3 style="margin-bottom: 0em; !important"><b>Buying</h3></b>
 								<li class="">
 									<div class="accordion__title">
-										<span class="h5">What do I need to use Rare Pepe Cards?</span>
+										<span class="h5">Buying</span>
 									</div>
 									<div class="accordion__content">
-									Content
+									There’s no standard price for a Pepe Card. Users set their own starting price when they sell their Pepe Card, and the price remains until the card is purchased or the seller cancels.
+									</div>
+								</li>
+								<br /><h3 style="margin-bottom: 0em; !important"><b>Selling</h3></b>
+								<li class="">
+									<div class="accordion__title">
+										<span class="h5">Selling a Rare Pepe</span>
+									</div>
+									<div class="accordion__content">
+									There’s no standard price for a Pepe Card. Users set their own starting price when they sell their Pepe Card, and the price remains until the card is purchased or the seller cancels.
+									</div>
+								</li>
+					<br /><h3 style="margin-bottom: 0em; !important"><b>Creating & Submitting</h3></b>
+								<li class="">
+									<div class="accordion__title">
+										<span class="h5">How do I submit my art?</span>
+									</div>
+									<div class="accordion__content">
+									Users can create original digital Rare Pepe artwork and post a 600x600 JPG of their work <a href="submit.html"> here. </a>
 									</div>
 								</li>
 								<li class="">
 									<div class="accordion__title">
-										<span class="h5">Installing & Using Metamask</span>
+										<span class="h5">What happens once my artwork is submitted?</span>
 									</div>
 									<div class="accordion__content">
-									Content
-									</div>
+Once your Rare Pepe artwork is submitted, the team at Rare Pepe will review it. If it meets all of our requirements, we will put it on the pipeline for release at your sell price during our first issuance of user generated artwork. <br /><br /> We are working on a way to automate and decentralize this process for the future.								</div>
 								</li>
-						<h2>Understanding Rare Pepes</h2>
+									<br /><h3 style="margin-bottom: 0em; !important"><b>Generation & Issuance</h3></b>
 								<li class="">
 									<div class="accordion__title">
-										<span class="h5">What do I need to use Rare Pepe Cards?</span>
+										<span class="h5">How do the cards work?</span>
 									</div>
 									<div class="accordion__content">
-									Content
-									</div>
+[FPO]Each card is backed by a hash id that is on the blockchain that you own forever									</div>
 								</li>
 								<li class="">
 									<div class="accordion__title">
-										<span class="h5">What do I need to use Rare Pepe Cards?</span>
+								<span class="h5">About Generations & Issuance</span>
 									</div>
 									<div class="accordion__content">
-									Content
-									</div>
+Generations are essentially decks of cards that are released at a specified date. Each card is uploaded in an order decided by (for now) the team at Rare Pepe Dapp. However, the order of the cards issues does determine a 			
 								</li>
+						
 </ul>
                         </div>
                     </div>
