--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                     </ul>
                                 </div>
                                 <div class="bar__module">
-                                	<a class="btn btn--sm type--uppercase" href="my-pepes.html"> <span class="btn__text">
+                                	<a class="btn btn--sm type--uppercase" href="wallet.html"> <span class="btn__text">
                                      My Pepes</span> </a>
                                     <a class="btn btn--sm btn--primary type--uppercase" href="marketplace.html"> <span class="btn__text">
                                     Marketplace</span> </a>
@@ -99,10 +99,10 @@
                         </div>
                         <div class="col-md-6 col-lg-5">
                             <div class="switchable__text">
-                                <h2>Create and Submit Original Artwork</h2>
+                                <h2>Create and Submit Digital Artwork</h2>
                                 <p class="lead">
 Users can submit their artwork to PepeDapp to be featured and sold on the marketplace. Creators get 96% of the sale of their original Pepe Cards.                                  </p>
-                                <a href="submit.html">Submit your Pepe Art &raquo;</a>
+                                <a href="submit.html">Submit a Rare Pepe &raquo;</a>
                             </div>
                         </div>
                     </div>
@@ -118,10 +118,10 @@ Users can submit their artwork to PepeDapp to be featured and sold on the market
                         </div>
                         <div class="col-md-6 col-lg-5">
                             <div class="switchable__text">
-                                <h2>Buy </h2>
+                                <h2>Buy</h2>
                                 <p class="lead">
-Buy original Pepe Cards directly in our marketplace using Metamask. The price of the card is determined by the seller. By default, Metamask will open to the lowest asking price of that card. Once owned, your cards will appear in your "my pepes" wallet.                                </p>
-                                <a href="#">View the Marketplace &raquo;</a>
+Buy digital rare Pepe Cards P2P in our marketplace using Metamask.                              </p>
+                                <a href="faq.html">Learn More &raquo;</a>
                             </div>
                         </div>
                     </div>
@@ -137,9 +137,9 @@ Buy original Pepe Cards directly in our marketplace using Metamask. The price of
                         </div>
                         <div class="col-md-6 col-lg-5">
                             <div class="switchable__text">
-                                <h2>Sell</h2>
+                                <h2>HODL or Sell</h2>
                                 <p class="lead">
-Once a Pepe Card is owned (either via submission or by purchasing a card) users can set the sell price and post it up for sale in the marketplace</p> 
+Once a Pepe Card is owned (either via submission or by purchasing a card) users can manage them in their <a href="wallet.html"> My Pepe Wallet</a>.</p> 
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,6 @@ Once a Pepe Card is owned (either via submission or by purchasing a card) users 
                                 	<div class="feature__body boxed boxed--border">
                                    	<h5>Satoshi Nakamoto Pepe</h5>
                                   			 <span>Amount issued: <b> 001 </b></span><br>
-                                  			 <span>Rareness Score: <b> 100 </b></span><br>
                        								<span class="label">Buy Now</span> </div>
                             					</div>
                        	 					</div>
@@ -168,7 +167,6 @@ Once a Pepe Card is owned (either via submission or by purchasing a card) users 
                                 	<div class="feature__body boxed boxed--border">
                                    	<h5>Pepe</h5>
                                   			 <span>Amount issued: <b> 001 </b></span><br>
-                                  			 <span>Rareness Score: <b> 100 </b></span><br>
                        								<span class="label">Buy Now</span> </div>
                             					</div>
                        	 					</div>
@@ -178,8 +176,7 @@ Once a Pepe Card is owned (either via submission or by purchasing a card) users 
                              	<span class="labelleft">#002</span>
                                 	<div class="feature__body boxed boxed--border">
                                    	<h5>Pepe</h5>
-                                  			 <span>Amount issued: <b> 001 </b></span><br>
-                                  			 <span>Rareness Score: <b> 100 </b></span><br>          
+                                  			 <span>Amount issued: <b> 001 </b></span><br>          
                        								<span class="label">Buy Now</span> </div>
                             					</div>
                        	 					</div>
@@ -193,7 +190,7 @@ Once a Pepe Card is owned (either via submission or by purchasing a card) users 
                         <div class="col-md-10 col-lg-8">
                             <h2>The new best Crypto Dapp.</h2>
                             <p class="lead">
-Unlike CryptoKitties, PepeDapp allows users to upload and sell their own artwork. Each piece of submitted artwork is vetted by the PepeDapp team and uploaded according to our <a href="#">generation and issuance</a> formula.                        </p>
+Unlike CryptoKitties, PepeDapp gives users the freedom to upload and sell their own artwork. Each piece of submitted artwork is vetted by the PepeDapp team and uploaded according to our <a href="faq.html">generation and issuance</a> formula.                        </p>
 <a class="btn btn--primary type--uppercase" href="marketplace.html"> <span class="btn__text">Enter the Marketplace</span> </a>
 
                         </div>
@@ -207,7 +204,7 @@ Unlike CryptoKitties, PepeDapp allows users to upload and sell their own artwork
                     <div class="row">
                         <div class="col-sm-6"> <img alt="Image" class="logo" src="img/logo-dark.png">
                             <ul class="list-inline list--hover">
-                                <li> <a href="about.html"><span class="type--fine-print">About<br></span></a> </li>
+                                <li> <a href="about.html"><span class="type--fine-print">marketplace<br></span></a> </li>
                                 <li> <a href="submit.html"><span class="type--fine-print">Submit</span></a> </li>
                                 <li> <a href="faq.html"><span class="type--fine-print">FAQs</span></a> </li>
                             </ul>
@@ -249,9 +246,3 @@ Unlike CryptoKitties, PepeDapp allows users to upload and sell their own artwork
     </body>
 
 </html>
-
-
-
-
-
-
