--- a/marketplace.html
+++ b/marketplace.html
@@ -46,7 +46,7 @@
                                     </ul>
                                 </div>
                                 <div class="bar__module">
-                                	<a class="btn btn--sm type--uppercase" href="my-pepes.html"> <span class="btn__text">
+                                	<a class="btn btn--sm type--uppercase" href="wallet.html"> <span class="btn__text">
                                      My Pepes</span> </a>
                                     <a class="btn btn--sm btn--primary type--uppercase" href="marketplace.html"> <span class="btn__text">
                                     Marketplace</span> </a>
