--- a/profile.html
+++ b/profile.html
@@ -44,8 +44,8 @@
                                     </ul>
                                 </div>
                                 <div class="bar__module">
-                                	<a class="btn btn--sm type--uppercase" href="#purchase-template"> <span class="btn__text">
-                                     My Pepes</span> </a>
+                                	<a class="btn btn--sm type--uppercase" href="wallet.html"> <span class="btn__text">
+                                     Pepe Wallet</span> </a>
                                     <a class="btn btn--sm btn--primary type--uppercase" href="#purchase-template"> <span class="btn__text">
                                     Marketplace</span> </a>
                                 </div>
