--- a/submit.html
+++ b/submit.html
@@ -49,7 +49,7 @@
                                     </ul>
                                 </div>
                                 <div class="bar__module">
-                                	<a class="btn btn--sm type--uppercase" href="my-pepes.html"> <span class="btn__text">
+                                	<a class="btn btn--sm type--uppercase" href="wallet.html"> <span class="btn__text">
                                      My Pepes</span> </a>
                                     <a class="btn btn--sm btn--primary type--uppercase" href="marketplace.html"> <span class="btn__text">
                                     Marketplace</span> </a>
@@ -62,19 +62,22 @@
         </div>
   
         <div class="main-container">
- <section class="text-center height-50">
+            <section class="cover height-50 imagebg text-center" data-overlay="4">
+                <div class="background-image-holder background--top">
+                    <img alt="background" src="img/landing-1.jpg" />
+                </div>
                 <div class="container pos-vertical-center">
                     <div class="row">
                         <div class="col-sm-8 col-md-6">
-                            <h2>We are now accepting submissions for future generations of Rare Pepe Cards.</h2>
+                            <h2 class="">We are now accepting submissions for future generations of Rare Pepe Cards.</h2>
                             <p class="lead">
-Please submit the Ethereum address associated with your Metamask account, a short story of your pepe card (<a href="profile.html">see example)</a> and a jpg of your original artwork.                            </p>
                         </div>
                     </div>
                     <!--end of row-->
                 </div>
                 <!--end of container-->
             </section>
+
             <section class=" bg--secondary">
                 <div class="container">
                     <div class="row">
